@startuml

class DocumentType {
    Long id
    String name
}

class Passenger {
    Long id
    String name
    String lastName
    DocumentType documentType
    String document
    String phoneNumber
    Integer age
    String email
    Double miles
}

class City {
    Long id
    String name
    List<City> destinationCities
}

class CityDestinations {
    Long id
    City originCity
    City destinationCity
}

class Flight {
    Long id
    String name
    City departureCity
    City arrivalCity 
    String departureDate
    String arrivalDate
    String airline
    Double miles
    Boolean isDirect
}

class Booking {
    Long id
    String code
    List<BookingDetails> details
    Double subtotal
    Double totalDiscount
    Double total
}

class BookingDetails {
    Passenger passenger
    Flight flight
    String passengerSeat
    Double discount
    Double subtotal
    Double totalDiscount
    Double total
    
}

Passenger -- DocumentType: has >
City -- CityDestinations: has >
Booking -- BookingDetails: has >
BookingDetails -- Passenger: has >
BookingDetails -- Flight: has >
Flight -- City: has >





@enduml